--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
   <footer>
     <p id="contact">
       Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel:
-      <a href="tel:+48123">+48 123</a>
+  <!--    <a href="tel:+48509201700">+48 509 201 700</a> -->
     </p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
