--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 
   <footer>
     <p id="contact">
-      Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a>  <!-- | Tel:
-    <a href="tel:+48123">+48 123</a> -->
+      Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> 
+      <!-- | Tel: <a href="tel:+48123">+48 123</a> -->
     </p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
