--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <div class="network" id="network">
     <canvas id="beamCanvas"></canvas>
 
-    <div class="center">Do It With IT</div>
+    <div class="center">Do It With IT test</div>
 
     <div class="circle-container" data-key="remote">
       <div class="circle">
@@ -470,6 +470,7 @@
   </script>
 </body>
 </html>
+
 
 
 
