--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
   <div class="network" id="network">
     <canvas id="beamCanvas"></canvas>
 
-    <div class="center">Do It With IT test</div>
+    // Centralny okrąg
+    
+    <div class="center">
+  <img src="Logo.png" alt="Do It With IT Logo" />
+</div>
 
     <div class="circle-container" data-key="remote">
       <div class="circle">
@@ -470,6 +474,7 @@
   </script>
 </body>
 </html>
+
 
 
 
